fixed scaling on smaller screens

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 #home {
   background-color: $green;
   color: white;
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
